--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
-    "ant-design-vue": "^3.3.0-beta.2",
-    "vue": "^3.2.25",
+    "ant-design-vue": "^3.2.9",
+    "core-js": "^3.23.3",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.2",
+    "vue": "^3.2.37",
     "vue-router": "^4.1.1",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
