--- a/package.json
+++ b/package.json
@@ -8,17 +8,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "ant-design-vue": "^3.2.9",
+    "@element-plus/icons-vue": "^2.0.6",
     "core-js": "^3.23.3",
-    "sass": "^1.53.0",
-    "sass-loader": "^13.0.2",
+    "element-plus": "^2.2.8",
     "vue": "^3.2.37",
     "vue-router": "^4.1.1",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.2",
     "typescript": "^4.5.4",
+    "unplugin-auto-import": "^0.9.2",
     "vite": "^2.9.9",
     "vue-tsc": "^0.34.7"
   }
