--- a/package.json
+++ b/package.json
@@ -1,27 +1,18 @@
 {
-  "name": "vue-admin-template",
+  "name": "vue3-admin-template",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.0.6",
-    "core-js": "^3.23.3",
-    "element-plus": "^2.2.8",
-    "vue": "^3.2.37",
-    "vue-router": "^4.1.1",
-    "vuex": "^4.0.2"
+    "vue": "^3.4.21"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.3.3",
-    "sass": "^1.53.0",
-    "sass-loader": "^13.0.2",
-    "typescript": "^4.5.4",
-    "unplugin-auto-import": "^0.9.2",
-    "vite": "^2.9.9",
-    "vue-tsc": "^0.34.7"
+    "@vitejs/plugin-vue": "^5.0.4",
+    "vite": "^5.2.0"
   }
 }
