--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mockjs": "^1.1.0",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
-    "vue": "^3.2.31",
+    "pinia": "^2.1.7",
+    "vue": "^3.4.27",
     "vue-i18n": "9.1.10",
     "vue-router": "4",
     "vuex": "^4.0.2"
