--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@vueuse/core": "^10.10.0",
     "axios": "^1.7.2",
     "element-plus": "^2.7.3",
     "nprogress": "^0.2.0",
