--- a/server/config.yaml
+++ b/server/config.yaml
@@ -26,7 +26,7 @@ mysql:
     prefix: ""
     port: "3306"
     config: charset=utf8mb4&parseTime=True&loc=Local
-    db-name: online_auth
+    db-name: github
     username: root
     password: wLei6700413@
     path: 120.26.171.169
