--- a/view/package.json
+++ b/view/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons": "^0.0.11",
+    "@element-plus/icons-vue": "^2.3.1",
     "@kangc/v-md-editor": "^2.3.5",
     "@vueuse/core": "^8.0.0",
     "axios": "^0.26.1",
@@ -20,15 +21,13 @@
     "mockjs": "^1.1.0",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
-    "sortablejs": "^1.14.0",
-    "splitpanes": "^3.1.1",
-    "throttle-debounce": "^3.0.1",
-    "v-contextmenu": "^3.0.0",
+    "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
+    "string-random": "^0.1.3",
     "vue": "^3.2.31",
     "vue-i18n": "9.1.10",
     "vue-router": "4",
-    "vuex": "^4.0.2",
-    "xlsx": "^0.18.3"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
