--- a/trunk_view_html/.env.development
+++ b/trunk_view_html/.env.development
@@ -1,3 +1,6 @@
 ENV = 'development'
 
-VITE_BASE_URL = '/dev-api'
+#VITE_BASE_URL = '/dev-api'
+#VITE_BASE_URL = 'http://127.0.0.1:8090/api'
+VITE_BASE_URL = '/mock'
+
