--- a/trunk_view_html/package.json
+++ b/trunk_view_html/package.json
@@ -22,6 +22,7 @@
     "nprogress": "^0.2.0",
     "sortablejs": "^1.14.0",
     "splitpanes": "^3.1.1",
+    "string-random": "^0.1.3",
     "throttle-debounce": "^3.0.1",
     "v-contextmenu": "^3.0.0",
     "vue": "^3.5.3",
